cleaning html, style scss

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                                 <a href="#"><i class="fa-brands fa-tiktok"></i>tiktok</a>
                             </li>
                             <li>
-                                <a href="#"><i class="fa-brands fa-youtube"></i>you-tube</a>
+                                <a href="#"><i class="fa-brands fa-twitter"></i>twitter</a>
                             </li>
                         </ul>
                     </div>
